tests/urmoac/errors/net_issues/edge_length_0/errors.urmoac
Edge '10000' has a length of 0.
